// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
  id={null}
  rows={null}
>
  <input
    className="Slider__SliderPiece-sc-1hp9era-0 iLVrxG"
    disabled={false}
    id="default"
    max={20}
    min={1}
    onChange={[Function]}
    step={1}
    type="range"
    value={8}
  />
</section>
`;

exports[` 2`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW Form__Inputs-v2wrel-3 dLfNrm"
    id={null}
    rows={null}
  >
    <section
      className="Form__Section-v2wrel-2 dIXoJq"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 KxMwb"
        fontSize="1.15em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Standard
      </h5>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 iLVrxG"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={1}
        />
      </section>
    </section>
    <section
      className="Form__Section-v2wrel-2 dIXoJq"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 KxMwb"
        fontSize="1.15em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Error
      </h5>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 icBIIF"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={1}
        />
      </section>
    </section>
    <section
      className="Form__Section-v2wrel-2 dIXoJq"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 KxMwb"
        fontSize="1.15em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Disabled
      </h5>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 iLVrxG"
          disabled={true}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={1}
        />
      </section>
    </section>
  </section>
</form>
`;

exports[` 3`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW Form__Inputs-v2wrel-3 dLfNrm"
    id={null}
    rows={null}
  >
    <section
      className="Form__Section-v2wrel-2 dIXoJq"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 KxMwb"
        fontSize="1.15em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Standard
      </h5>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 iLVrxG"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={10}
        />
      </section>
    </section>
    <section
      className="Form__Section-v2wrel-2 dIXoJq"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 KxMwb"
        fontSize="1.15em"
        fontWeight={400}
        letterSpacing="0px"
      >
        With Label
      </h5>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe Slider__SliderLabel-sc-1hp9era-1 bMyAub"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          1
        </label>
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 iLVrxG"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={1}
        />
        <div
          className="Bar__BarLayout-icfo76-2 ebMgLW"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fNcQEg"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0.2px"
            >
              1
            </label>
          </div>
          <div
            className="Bar__Slot-icfo76-1 kZQbjh"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0.2px"
            >
              20
            </label>
          </div>
        </div>
      </section>
    </section>
    <section
      className="Form__Section-v2wrel-2 dIXoJq"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 KxMwb"
        fontSize="1.15em"
        fontWeight={400}
        letterSpacing="0px"
      >
        With Range
      </h5>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 iLVrxG"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={15}
        />
        <div
          className="Bar__BarLayout-icfo76-2 ebMgLW"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fNcQEg"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0.2px"
            >
              1
            </label>
          </div>
          <div
            className="Bar__Slot-icfo76-1 kZQbjh"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0.2px"
            >
              20
            </label>
          </div>
        </div>
      </section>
    </section>
  </section>
</form>
`;
